config_sh/iptables.rules
# Generated by iptables-save v1.4.21 on Sun Apr 10 07:38:56 2016
*filter
:INPUT ACCEPT [985975:1029171481]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [659191:136205460]
-A OUTPUT -m string --string "dotamax.com" --algo bm --to 65535 -j DROP
-A OUTPUT -m string --string "douyu.com" --algo bm --to 65535 -j DROP
-A OUTPUT -m string --string "zhanqi.tv" --algo bm --to 65535 -j DROP
-A OUTPUT -m string --string "huomaotv.com" --algo bm --to 65535 -j DROP
-A OUTPUT -m string --string "huya.com" --algo bm --to 65535 -j DROP
-A OUTPUT -m string --string "panda.tv" --algo bm --to 65535 -j DROP
-A OUTPUT -m string --string "longzhu.com" --algo bm --to 65535 -j DROP
-A OUTPUT -m string --string "iqiyi.com" --algo bm --to 65535 -j DROP
-A OUTPUT -m string --string "bilibili.com" --algo bm --to 65535 -j DROP
COMMIT
# Completed on Sun Apr 10 07:38:56 2016
